Fix horizontal scroll in mobile

--- a/css/app.css
+++ b/css/app.css
@@ -281,6 +281,10 @@ h3 {
 	padding-bottom: 1em;
 }
 
+#social ul {
+	margin: 0;
+}
+
 a:hover i.fa-envelope.fa-inverse::after {
 	content: "Email Me";
 }
